test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/record-key-with-extended-attribute.widl
interface Foo {
  void foo(record<[XAttr] DOMString, any> param);
};
